--- a/aim3.qmd
+++ b/aim3.qmd
@@ -8,16 +8,6 @@ format:
     error: false
 ---
 
-talk about padj
-
-talk about stability / consistency (discussion section)
-
-check the citations
-
-check for the word CITE
-
-maps of 4, 5, 6 components in an appendix????
-
 ## Introduction
 
 Migration plays a crucial role in shaping the demographic, social, and health landscapes of the United States. County-to-county migration, in particular, not only reflects the interconnectedness of regions but actively influences it, impacting local economies, social structures, and health outcomes in significant ways. Despite growing interest in understanding the health effects of migration, current analytical approaches struggle to capture the full complexity of migration flows and their multifaceted relationships with public health. Existing models often examine single or limited dimensions, missing the nuanced, multidimensional patterns essential for a comprehensive understanding of migration's health impacts. This paper proposes tensor factorization as a novel method for assessing the association between regional interconnectedness—driven by migration flows—and county-level health outcomes, specifically premature age-adjusted mortality rates.
@@ -28,11 +18,9 @@ In response to these limitations, this study explores tensor factorization as a 
 
 Tensor factorization has been applied successfully across numerous fields, demonstrating its versatility in uncovering hidden relationships. For example, it powers recommendation systems, such as Netflix’s algorithm, by simultaneously analyzing user preferences, item attributes, and ratings to uncover multidimensional patterns [@hidasi2012]. In image processing, tensor decomposition is employed to identify shared features across images, improving recognition and categorization algorithms. Public health researchers have also adopted tensor factorization to isolate seasonal trends in infectious diseases [@korevaar2020] and assess mental health impacts during the COVID-19 pandemic [@zhu2023]. Across these domains, tensor factorization has proven uniquely effective at illuminating complex relationships within multidimensional data—relationships that are often missed by other methods.
 
-Researchers have also used tensor factorization to study human mobility patterns, further illustrating its relevance to migration and health research. For instance, one study employed tensor decomposition with geolocated Twitter data to analyze migration flows between European countries, identifying distinct migration types, such as student migration, long-term migration, and tourism [@nguyen2017]. Another study used GPS taxi data in Beijing to uncover both temporal movement patterns and "spatial communities," which researchers then linked to neighborhood stability [@wang2020]. In Singapore, tensor factorization was applied to public transportation data, enabling researchers to classify passenger types and journey patterns [@sun]. Moreover, a recent study in Liège, Belgium, used tensor decomposition to examine commuting patterns with mobile phone data, validating its potential for understanding population mobility [@tensord]. Similarly, researchers found that tensor factorization outperformed other methods in analyzing population mobility in urban centers using cell phone data [@balasubramaniam2020]. In these and similar studies, tensor factorization has consistently expanded upon conventional approaches in capturing the intricate dynamics of human mobility within and between regions.
+Researchers have also used tensor factorization to study human mobility patterns, further illustrating its relevance to migration and health research. For instance, one study employed tensor decomposition with geolocated Twitter data to analyze migration flows between European countries, identifying distinct migration types, such as student migration, long-term migration, and tourism [@nguyen2017]. Another study used GPS taxi data in Beijing to uncover both temporal movement patterns and "spatial communities," which researchers then linked to neighborhood stability [@wang2020]. In Singapore, tensor factorization was applied to public transportation data, enabling researchers to classify passenger types and journey patterns [@sun2016]. Moreover, a recent study in Liège, Belgium, used tensor decomposition to examine commuting patterns with mobile phone data, validating its potential for understanding population mobility [@kolda2008]. Similarly, researchers found that tensor factorization outperformed other methods in analyzing population mobility in urban centers using cell phone data [@balasubramaniam2020]. In these and similar studies, tensor factorization has consistently expanded upon conventional approaches in capturing the intricate dynamics of human mobility within and between regions.
 
 Migration is a powerful influence on regional health, with the potential to either alleviate or exacerbate disparities depending on contextual factors. Regions experiencing an influx of younger, healthier individuals often see improvements in workforce participation and health outcomes, as these migrants contribute to economic stability and bring fresh skills and perspectives. Migration also enables individuals to leave areas with limited resources, potentially improving health outcomes in their new locations. However, migration can also deepen health disparities. Counties with high out-migration rates may lose younger, healthier populations, leading to an aging and more vulnerable remaining population that struggles with worsened health outcomes and strained local resources. Destination counties, particularly those unprepared for rapid population growth, may experience overcrowded health facilities and an increased demand for social services, which can stretch resources and exacerbate existing disparities.
-
-~~Thus, migration plays an essential role in shaping place-based health disparities, with both origin and destination counties affected by population movement. Structural differences between regions—such as those between urban and rural areas or between affluent and economically disadvantaged counties—interact with migration patterns to either mitigate or worsen health inequalities. Counties with weaker infrastructure, fewer health services, and lower economic stability may experience further declines in health as younger residents migrate away. In contrast, destination counties may benefit economically and socially from the influx of migrants, but these health benefits are not always evenly distributed and can add strain on local services if growth is too rapid. Migration, then, is deeply intertwined with social determinants of health, and its analysis requires a multidimensional approach that can capture its effects across regions over time.~~
 
 In this paper, we aim to explore the utility of tensor factorization in uncovering complex and previously unexamined relationships between migration patterns and public health. By examining migration flows across origin, destination, and time dimensions, tensor factorization can offer a more comprehensive view of migration as a system that influences county-level health holistically, rather than isolating single effects. This approach provides an innovative, multidimensional perspective that can shed new light on the ways migration interacts with health across interconnected regions, offering valuable insights for further study.
 
@@ -75,15 +63,13 @@ $$ y_{it} = \beta_0 + \sum_{r=1}^{R} \beta_{o_r} o_{ir} + \sum_{r=1}^{R} \beta_{
 
 where:
 
--   $r$ is the number of components, selected based on the elbow plot
+-   $R$ is the total number of components, selected based on the elbow plot
 
 -   $\beta_{o_r}$, $\beta_{d_r}$, and $\beta_{t_r}$ are the coefficients for each component $r$ of the origin, destination, and time loadings, respectively.
 
 -   $\gamma_n$ are the coefficients for urbanicity categories, with the most urban category (large central metro) as the reference <!--# not sure if i should expand here or not .... \gamma_{\text{LFM}} \text{Large Fringe Metro}_i + \gamma_{\text{MM}} \text{Medium Metro}_i + \gamma_{\text{SM}} \text{Small Metro}_i + \gamma_{\text{MIC}} \text{Micropolitan}_i + \gamma_{\text{R}} \text{Rural}_i + u_{it}  -->
 
 -   $\mu_{it}$ represents the spatial error term accounting for spatial and temporal autocorrelation in the data
-
-~~To evaluate the fit of our models, we conducted a comparative analysis using the Akaike Information Criterion (AIC). AIC provides a measure of model quality that balances model fit and complexity, allowing us to assess which model best explains the data with the least amount of error. AIC is particularly useful when the true model is known to be complex [@vrieze2012], as is expected for any model of place-based health. We compared four models with varying configurations: some included coefficients for urbanicity, while others did not, allowing us to explore the impact of urbanicity adjustments on model performance. Additionally, we assessed models that included coefficients for all three tensor decomposition components versus those restricted to only the first (and most prominent) component. By examining AIC scores across these different models, we could determine whether adding urbanicity and/or additional components significantly improved model fit or simply introduced unnecessary complexity. The model with the lowest AIC score was deemed the most efficient, as it achieved the best balance between fit and simplicity, guiding our understanding of the importance of urbanicity and the relevance of multiple components in explaining migration patterns.~~
 
 ## Results
 
@@ -154,7 +140,7 @@ plot_error("error_tot")
 
 ### Descriptions of 3 Migration Systems
 
-~~We started by creating maps of the ranked loadings of the tensor decompositions. Based on the elbow plot, which showed minimal error reduction beyond 3 components, and based Almquist et al's use of a 6-component decomposition to describe internal US migration, we began by examining maps for decompositions with 3, 4, 5, and 6 components.~~ Below, we present maps for the ranked loadings from a 3-component decomposition. In each map, a county's color intensity reflects its rank in the factor matrix for a specific tensor dimension (either as a destination or an origin), with ranks ranging from 1 to 3109 (the total number of counties in our tensor). Higher-ranked counties are more influential in the migration system. We resolved ties by assigning the lowest rank available to each tied value. Lighter colors represent counties with higher-ranked loadings, indicating greater importance to the migration system relative to other counties.
+Below, we present maps for the ranked loadings from a 3-component decomposition. In each map, a county's color intensity reflects its rank in the factor matrix for a specific tensor dimension (either as a destination or an origin), with ranks ranging from 1 to 3109 (the total number of counties in our tensor). Higher-ranked counties are more influential in the migration system. We resolved ties by assigning the lowest rank available to each tied value. Lighter colors represent counties with higher-ranked loadings, indicating greater importance to the migration system relative to other counties.
 
 ```{r do the decomp! }
 # this section needs to be updated w the latest min seed of the 100 iteration decomp 
@@ -446,9 +432,11 @@ The maps of **Component 1** show that origin counties with relatively high loadi
 
 This pattern suggests a possible link between migration trends and policy-driven events, such as the Affordable Care Act (ACA) in 2013 and the Tax Cuts and Jobs Act (TCJA) in 2018, which may have influenced where people filed their taxes and, potentially, where they chose to live. While research using American Community Survey data found no significant impact of the ACA on interstate migration—indicating that it may not have spurred widespread physical relocations [@goodman2017]—evidence of the TCJA’s effect on migration is less clear, with some researchers finding that the TCJA had a significant negative impact on migration to high-tax states [@simonson2022]. IRS data, which tracks tax filing addresses rather than physical moves, could be particularly sensitive to policy changes since it reflects administrative adjustments rather than actual relocations. Such data might capture shifts in filing behavior, as taxpayers adjust addresses to optimize tax benefits, meet healthcare requirements, or take advantage of financial incentives.
 
-It’s important to note that our analysis cannot fully capture the reasons behind these address changes or definitively explain why individuals might have relocated. Multiple factors, including personal, social, and economic reasons, can influence migration patterns, and these motivations remain beyond the reach of our current dataset. Consequently, while we observe notable trends for 2013 and 2018, attributing these patterns solely to policy shifts involves a degree of speculation, as the true drivers of migration decisions are inherently complex and multifaceted.
+It is important to note that our analysis cannot fully capture the reasons behind these address changes or definitively explain why individuals might have relocated. Multiple factors, including personal, social, and economic reasons, can influence migration patterns, and these motivations remain beyond the reach of our current dataset. Consequently, while we observe notable trends for 2013 and 2018, attributing these patterns solely to policy shifts involves a degree of speculation, as the true drivers of migration decisions are inherently complex and multifaceted.
 
 ##### Top Origins and Destinations in Component 1 
+
+In examining the top origin and destination counties within Component 1, we observe that out-migration is heavily concentrated in Cook County, Illinois, home to the large metropolitan area of Chicago. In contrast, the destination counties are predominantly rural. This suggests that Component 1 primarily reflects a pattern of urban-to-rural migration.
 
 ```{r comp 1 top loadings, echo = FALSE, warning = FALSE, message = FALSE, print = FALSE}
 print(plot_top_loadings(1))
@@ -484,7 +472,7 @@ print (p3)
 print(plot_time_vs_loadings(3))
 ```
 
-In the maps for Component 3, we again observe a broader distribution of ranked loadings among destination counties than among origin counties. Highly ranked origin counties are scattered across the U.S., whereas highly ranked destination counties appear more evenly distributed and clustered. Additionally, the years 2013 and 2018 play a prominent role in explaining the migration patterns captured by Component 3 while years 2019 and 2017 are the least influential.
+In the maps for Component 3, we again observe a broader distribution of ranked loadings among destination counties than among origin counties. Highly ranked origin counties are scattered across the U.S., whereas highly ranked destination counties appear more evenly distributed and clustered. Once again, the years 2013 and 2018 play a prominent role in explaining the migration patterns captured by Component 3 while years 2019 and 2017 are the least influential.
 
 ##### Top Origins and Destinations in Component 3
 
@@ -494,7 +482,7 @@ print(plot_top_loadings(3))
 
 ![](aim3_images/urb_legend.png){fig-align="right"}
 
-Similar to Component 1, Cook County, Illinois, stands out as the largest origin county in Component 3. However, unlike Component 1, Lyon County, Iowa, also contributes to the origin dimension. The reason for Lyon County’s higher origin loading compared to other rural counties is unclear, but its location along the state border with Minnesota and South Dakota—and the fact that our data are based on tax filings—suggests that the result may be due to households filing taxes in different states, influenced by variations in state tax codes [@cohen2014]. Likewise, the top destination county in Component 3 is Sequoyah County, Oklahoma, which borders another state and contains the Fort Smith metropolitan area that spans both Oklahoma and Arkansas. Notably, a total of five of the top ten destination loadings are in counties along state borders, including Le Flore County, Oklahoma; Escambia County, Alabama; Santa Rosa County, Florida; and Harrison County, Missouri. Based on these patterns, we interpret Component 3 as potentially capturing migration anomalies influenced by state-level tax differences.<!--# i did go back and verify that my origins and destinations are not flipped due to this weirdness. they are indeed correct!  -->
+Similar to Component 1, Cook County, Illinois, stands out as the largest origin county in Component 3. However, unlike Component 1, Lyon County, Iowa, also contributes to the origin dimension. The reason for Lyon County’s higher origin loading compared to other rural counties is unclear, but its location along the state border with Minnesota and South Dakota—and the fact that our data are based on tax filings—suggests that the result may be due to households filing taxes in different states, influenced by variations in state tax codes [@cohen2014]. Likewise, the top destination county in Component 3 is Sequoyah County, Oklahoma, which borders Arkansas and contains the Fort Smith metropolitan area that spans both Oklahoma and Arkansas. Notably, a total of four of the top ten destination loadings are in counties along state borders, including Le Flore County, Oklahoma; Escambia County, Alabama; and Santa Rosa County, Florida. Based on these patterns, we interpret Component 3 as potentially capturing migration anomalies influenced by state-level tax differences.<!--# i did go back and verify that my origins and destinations are not flipped due to this weirdness. they are indeed correct!  -->
 
 ### Relationship to County-level Health 
 
@@ -554,18 +542,6 @@ $$
 y_{it} = \beta_0 + \sum_{n=1}^{3} \beta_{o_{n}} o_{in} + \sum_{n=1}^{3} \beta_{d_n} d_{in} + \sum_{n=1}^{3} \beta_{t_n} t_{tn} + \sum_{k=2}^{6} \gamma_k \text{Urbanicity}_k + \mu_{it}
 $$
 
-~~where:~~
-
--   $\beta_{o_n}$ ~~are the coefficients for origin loadings~~ $o_1$~~,~~ $o_2$~~, and~~ $o_3$
-
--   $\beta_{d_n}$ ~~are the coefficients for destination loadings~~ $d_1$~~,~~ $d_2$~~, and~~ $d_3$
-
--   $\beta_{t_n}$ ~~are the coefficients for time loadings~~ $t_1$~~,~~ $t_2$~~, and~~ $t_3$
-
--   $\gamma_i$ ~~are the coefficients for urbanicity categories where the most urban category (large central metro) is the reference~~ <!--# not sure if i should expand here or not .... \gamma_{\text{LFM}} \text{Large Fringe Metro}_i + \gamma_{\text{MM}} \text{Medium Metro}_i + \gamma_{\text{SM}} \text{Small Metro}_i + \gamma_{\text{MIC}} \text{Micropolitan}_i + \gamma_{\text{R}} \text{Rural}_i + u_{it}  -->
-
--   $\mu_{it}$ ~~represents the spatial error term accounting for random effects in the model with spatial autoregressive errors.~~
-
 The spatial panel model revealed several significant findings, as shown in the table below. The origin and destination loadings capture variability in health outcomes based on the origin and destination characteristics of migration flows. Notably, the coefficients for the second origin loading $\beta_{o_2}$ and the first and third destination loadings $\beta_{d_1}$ and $\beta_{d_3}$ are statistically significant. Increased $o_2$ (ie increased loadings in Component 2 - *Specific Phenomena*) are associated with higher premature mortality rates increased $d_1$ and $d_3$ (ie loadings in Component 1 - *Urban-to-Rural* and Component 3 - *State borders*) are associated with lower premature mortality rates. This may suggest that counties contributing greatly as an origin of migration is negative for county-level health while contributing greatly as a destination of migration is positive for county-level health.
 
 Among the time components, only the coefficient $\beta_{t_1}$ is statistically significant. This makes sense given that in tensor decomposition, the first component represents the "most typical" or the most common pattern of migration. Since similar patterns in time loadings were seen across all three components, there is little reason to believe we would need to include the second and third components in addition to the first.
@@ -607,25 +583,17 @@ Taken together, these results suggest that the relationship between migration an
 
 ## Discussion
 
-all the different transformations i tested; pop adj ; climate change and inequality ; acs data
-
 Through the use of tensor decomposition, we have established three key migration systems of internal migration in the US: **Urban-to-rural migration** (Component 1), **Specific phenomena**(Component 2), and **State borders** (Component 3). These components represent complex migration dynamics, each with varying effects on health outcomes.
 
 Our analysis highlighted significant relationships between migration components and mortality rates. Counties that played a strong role as origins in Components 2 were associated with higher mortality rates, suggesting that areas experiencing out-migration may face health challenges, potentially due to socioeconomic stressors, the outflow of younger, healthier populations, or due to public health emergencies such as the Flint Water Crisis. Conversely, counties that played a strong role as destinations in Components 1 and 3 showed a negative association with mortality rates, indicating that regions that are destinations for migration may experience better health outcomes. These findings suggest that migration can have both positive and negative effects on health, depending on the specific nature of the flows.
-
-~~From a public health perspective, understanding each county's unique role within a migration system can help policymakers create more tailored interventions. Some regions may be experiencing population loss and the resulting strain on healthcare systems and social services. In contrast, other regions may demonstrate more stable or protective migration patterns, and may offer lessons in fostering environments that mitigate the negative health impacts of migration. This emphasizes the importance of understanding migration as a dynamic process that shapes health outcomes in both origin and destination areas.~~
-
-~~The findings of this study are consistent with previous research linking migration and health outcomes but add new insights through the use of tensor decomposition to capture the complex nature of migration flows. Unlike traditional methods that focus on static or linear migration patterns, tensor decomposition allows for the identification of multifaceted migration dynamics and their spatial and temporal evolution. This approach provides a more nuanced understanding of how migration influences health, revealing both risks and potential benefits associated with different migration flows.~~
 
 An important challenge we encountered in this analysis lies in the instability and inconsistency of tensor decomposition methods. Tensor decomposition, while powerful for capturing multidimensional migration patterns, can often yield non-reproducible results due to its sensitivity to initial parameter settings, the choice of algorithm, and the nature of the data. In this study, we experimented with various initialization strategies to achieve a decomposition that best represented migration dynamics; however, even small variations in the initialization often produced substantially different decompositions. This instability makes it difficult to interpret and replicate findings reliably across different studies or even within the same dataset. One key factor contributing to this inconsistency is the non-convex nature of the optimization involved in tensor decomposition [@adali2022]. Since multiple local minima exist, different runs can converge on distinct solutions that each capture different patterns in the data, even if the underlying data remains the same. This issue is particularly pronounced when using methods like Canonical Polyadic (CP) decomposition, where the model can fit the data well (i.e., minimizing error) but produce multiple different results with the same error that yield varying component interpretations across decompositions [@hale2021]. As a result, we observe contradictory migration patterns across different runs, which poses significant challenges in verifying the robustness of these findings.
 
 Another layer of complexity arises from the limited interpretability of certain tensor components, which can shift depending on the data preprocessing steps and tensor rank selection. While methods such as non-negative tensor factorization (NTF) help improve interpretability by applying constraints to ensure positive values that align with real-world quantities, component selection remains subjective, relying heavily on domain expertise and anticipated outcomes. This subjectivity reduces reproducibility and weakens the potential of tensor decomposition as a consistent analytical tool in migration and health research. These challenges with instabililty underscore the need for future research to establish standardized protocols for validating tensor decomposition results [@adali2022]. Methods such as ensemble decomposition or consensus clustering may provide an avenue for reconciling diverse outputs generated by tensor decomposition to identify stable patterns.
 
-The use of IRS migration data, which only includes individuals from household that file taxes, introduces a potential bias, as it excludes non-filers, such as low-income populations, undocumented migrants, and others who may not be captured by tax records. This could lead to an under-representation of certain demographic groups in the migration analysis, potentially skewing the results. That said, if we observe a relationship between migration and health using the IRS data, this relationship is likely even stronger in reality as the excluded populations may experience even greater health disparities linked to migration CITE?.
+The use of IRS migration data, which only includes individuals from household that file taxes, introduces a potential bias, as it excludes non-filers, such as low-income populations, undocumented migrants, and others who may not be captured by tax records. This could lead to an under-representation of certain demographic groups in the migration analysis, potentially skewing the results. That said, if we observe a relationship between migration and health using the IRS data, this relationship is likely even stronger in reality as the excluded populations may experience even greater health disparities linked to migration. <!--# cite? -->
 
 Additionally, the IRS data itself has been subject to criticism for inconsistencies and volatility, particularly after 2011 when the IRS took over data preparation from the US Census Bureau. As DeWaard et al has noted, there are systemic issues with the IRS data that can lead to fluctuations in migration estimates, which are not fully explained by changes in IRS data collection methods [@dewaard2022]. This raises concerns about the reliability of the migration patterns observed in the post-2011 IRS data, which could affect the robustness of our findings.
-
-Finally, this study only considered internal US migration, excluding migration flows from outside the United States. This focus on domestic migration limits the generalizability of our results, especially in regions where international migration plays a significant role in shaping population health dynamics. Future studies could improve upon these limitations by incorporating more comprehensive data sources that account for non-tax-filing populations and international migration flows.
 
 To accurately capture the multifaceted relationship between migration and health, future studies must also prioritize the development and integration of demographic-specific data sources. Current datasets overlook critical populations—such as undocumented migrants, low-income households, and young adults—whose migration patterns and health needs may significantly differ from the general population. These populations frequently experience unique health vulnerabilities and stressors related to migration, which are not reflected in generalized data. Tailored data sources that account for race, age, socioeconomic status, and immigration status are essential for understanding the nuanced ways migration impacts health disparities across different demographic groups. Access to these demographic-specific data sources would allow researchers to capture a fuller, more accurate picture of how migration affects health outcomes, leading to more effective, equitable public health interventions.
 
