--- a/intro.qmd
+++ b/intro.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Introduction"
-format: pdf
+format: docx
 editor: visual
 bibliography: references.bib
 citeproc: true
@@ -18,7 +18,7 @@ This dissertation is structured around three primary aims:
 
 2.  **Compositional Factors and Migration:** The second aim centers on compositional place-based health factors by examining how county-to-county migration flows impact models of county-level health.
 
-3.  **Integration of Contextual and Compositional Factors:** The third aim examines migration as both a contextual and a compositional place-based health factor, using spatio-temporal modeling to assess how the interaction between migration patterns and local geographic context influences premature mortality rates and may contribute to place-based health inequities.
+3.  **Integration of Contextual and Compositional Factors:** The third aim examines whether a county's position within a migration system (as determined through tensor factorization) is associated with average health in that county.
 
 ## Defining contextual measures of health
 
@@ -26,7 +26,7 @@ This dissertation is structured around three primary aims:
 
 Numerous studies have outlined the effects of socioeconomic conditions on health, both at the individual and place-level. Areas with higher levels of poverty, unemployment, and lower educational attainment often exhibit poorer health outcomes due to limited access to resources and opportunities that promote healthy living [@diezroux2001]. Lack of economic opportunity can lead to food insecurity, inadequate housing, and reduced access to healthcare services, all of which have direct and indirect effects on the health of communities. Additionally, even after controlling for individual-level health factors, neighborhood disadvantage has been shown to be related to higher rates of mortality and morbidity due to cardiovascular conditions [@diezroux2007; @pickett2001].
 
-Environmental and climate-related factors also play a significant role in shaping health outcomes. Factors such as air and water quality, availability of green spaces, and exposure to pollutants can significantly influence the incidence of respiratory diseases, cardiovascular conditions, and mental health disorders. For instance, communities located near industrial sites may suffer from higher levels of pollution, which can lead to adverse health effects over time. However, environmental resources and stressors are not distributed equally, with marginalized communities, particularly people of color, disproportionately bearing the brunt of negative impacts [@environm; @banzhaf2019].
+Environmental and climate-related factors also play a significant role in shaping health outcomes. Factors such as air and water quality, availability of green spaces, and exposure to pollutants can significantly influence the incidence of respiratory diseases, cardiovascular conditions, and mental health disorders. For instance, communities located near industrial sites may suffer from higher levels of pollution, which can lead to adverse health effects over time. However, environmental resources and stressors are not distributed equally, with marginalized communities, particularly people of color, disproportionately bearing the brunt of negative impacts [@morello-frosch2002; @banzhaf2019].
 
 The availability and accessibility of healthcare services are critical health factors. Areas with a higher concentration of healthcare professionals, facilities, and services generally experience better health outcomes, as residents can more easily access preventive care, receive timely diagnoses, and undergo necessary treatments, leading to higher overall healthcare utilization [@andersen2014; @léonard2009]. A study specifically examining maternal healthcare found that a one-unit increase in population density corresponds to a 0.2% increase in maternal healthcare coverage on average [@hanlon2012]. In contrast, rural regions and underserved urban areas often encounter substantial barriers to healthcare access, contributing to treatment delays and poorer health outcomes.
 
@@ -40,7 +40,7 @@ The idea of place, as conceptualized by contextual health factors, encompasses a
 
 Demographic variables such as age, gender, race, and ethnicity are fundamental compositional factors that shape the health profile of a place. For example, communities with a higher proportion of elderly individuals may experience greater prevalence of chronic, resource intensive diseases since 79% of individuals over age 70 have at least one chronic condition [@reducing]. Additionally, older female adults living alone may be reliant on public transportation options since they are least likely to live in households with access to at least one vehicle [@li2024].
 
-Socioeconomic status (SES) is another critical and complex compositional factor that significantly influences health outcomes. It is widely accepted that higher SES is generally associated with better health outcomes due to greater access to healthcare resources, healthier living conditions, and greater educational and employment opportunities. One study of myocardial infarction patients in Minnesota found that a \$10,000 increase in income estimated from census tract data was associated with 10% reduction in risk of mortality [@gerber2008]. Similarly, individuals in the lowest household income quartile have self-reported rates of poor or fair health more than twice as high as individuals of the same age with incomes in the 25th through 50th percentile [@smith2004]. Additionally, there is strong correlation between high rates of income inequality and lower life expectancy across OECD countries[@kawachi1999; @commenta], and some research suggests a correlation between income inequality and high rates of obesity [@zaman2008]. <!--# need to distinguish between SES as contextual and SES as compositional -->
+Socioeconomic status (SES) is another critical and complex compositional factor that significantly influences health outcomes. It is widely accepted that higher SES is generally associated with better health outcomes due to greater access to healthcare resources, healthier living conditions, and greater educational and employment opportunities. One study of myocardial infarction patients in Minnesota found that a \$10,000 increase in income estimated from census tract data was associated with 10% reduction in risk of mortality [@gerber2008]. Similarly, individuals in the lowest household income quartile have self-reported rates of poor or fair health more than twice as high as individuals of the same age with incomes in the 25th through 50th percentile [@smith2004]. Additionally, there is strong correlation between high rates of income inequality and lower life expectancy across OECD countries[@kawachi1999; @wilkinson1997], and some research suggests a correlation between income inequality and high rates of obesity [@zaman2008]. <!--# need to distinguish between SES as contextual and SES as compositional -->
 
 <div>
 
@@ -68,9 +68,9 @@ Urbanicity is a contested and multifaceted concept, playing a pivotal role in sh
 
 **Migration serves as both a cause and an effect of place**. As a cause, migration can reshape the demographic and socioeconomic composition of a place by introducing new populations with distinct attributes and needs, thereby influencing local resources, services, and social structures. For instance, an influx of migrants can stimulate economic growth, diversify cultural landscapes, and alter housing demands, thereby transforming the contextual characteristics of the destination. Conversely, migration is also an effect of place, driven by the push and pull factors inherent in the geographical, economic, and social environments of both origin and destination locations. Factors such as job opportunities, living conditions, environmental quality, and social networks can either attract or repel individuals from certain places, making migration a response to the existing contextual and compositional features of a location. Thus, understanding migration requires a dual perspective that acknowledges how places shape and are shaped by the movement of people.
 
-Throughout this dissertation, we refer to migration as the movement of people between US counties. We do not attempt to measure or quantify international migration, nor are we able to account for forced migration, displacement, or other forms of involuntary migration. To capture internal migration, we rely on Internal Revenue Service migration flow data, which tracks household moves based on changes in tax return filings. This dataset provides valuable insights into population mobility by identifying when households have moved from one county to another within the United States. However, it is important to note that IRS data only captures formal, voluntary migration of tax-filing households and does not account for international migration or other informal forms of movement. While this dataset offers a robust measure of internal migration patterns, it is limited in that it excludes certain populations, such as those who do not file taxes or those involved in forced migration or displacement, which are important components of overall migration trends. <!--# need some citations using IRS data here or in the next para -->
+Throughout this dissertation, we refer to migration as the movement of people between US counties. We do not attempt to measure or quantify international migration, nor are we able to account for forced migration, displacement, or other forms of involuntary migration. To capture internal migration, we rely on Internal Revenue Service migration flow data, which tracks household moves based on changes in tax return filings. This dataset provides valuable insights into population mobility by identifying when households have moved from one county to another within the United States. However, it is important to note that IRS data only captures formal, voluntary migration of tax-filing households and does not account for international migration or any informal forms of movement. While this dataset offers a robust measure of internal migration patterns, it is limited in that it excludes certain populations, such as those who do not file taxes or those involved in forced migration or displacement, which are important components of overall migration trends. <!--# need some citations using IRS data here or in the next para -->
 
-Despite its limitations, IRS migration flow data offers a unique lens through which we can observe patterns of internal migration and how these movements reshape the demographic and social landscapes of communities. Since the data primarily captures the most routine, voluntary household moves of tax-filing individuals, it reflects a relatively stable and formal type of migration. If we find that migration is significant in shaping health outcomes using this data, it is likely that migration’s true impact is even more profound in real life, where more dynamic forms of movement—including informal, forced, and non-tax-filing migrations—also play a role. By examining where and when people move, we can begin to assess the broader implications of migration on health outcomes within places. Theories of migration provide valuable frameworks for understanding how migration influences the health of individuals and communities within places. These theories, when applied to internal migration, offer insights into both the contextual and compositional measures of health in a place.
+Despite its limitations, IRS migration flow data offers a unique lens through which we can observe patterns of internal migration and how these movements reshape the demographic and social landscapes of communities. Since the data primarily captures the most routine, voluntary household moves of tax-filing individuals, it reflects a relatively stable and formal type of migration. Notably, IRS data may provide more stable response rates compared to American Community Survey (ACS) data as the ACS relies on voluntary survey responses, whereas IRS data is collected through tax filings, which are financially incentivized and thus more consistenly reported[@foster2018]. If we find that migration is significant in shaping health outcomes using this data, it is likely that migration’s true impact is even more profound in real life, where more dynamic forms of movement—including informal, forced, and non-tax-filing migrations—also play a role. By examining where and when people move, we can begin to assess the broader implications of migration on health outcomes within places. Theories of migration provide valuable frameworks for understanding how migration influences the health of individuals and communities within places. These theories, when applied to internal migration, offer insights into both the contextual and compositional measures of health in a place.
 
 Economic theories of internal migration focus on wage and employment opportunities as primary drivers of migration. According to macroeconomic models, individuals move from regions with surplus labor and low wages to areas with labor shortages and high wages, and in some cases, individuals move because they have particular skills that are more highly rewarded in specific regions [@borjas1992]. However, migration can also reinforce poverty, as poverty itself is a signficiant indicator of where people choose to move. In a study of the spatial concentration of poverty, poor individuals were found to be more likely to move into high-poverty areas where low-wage jobs and affordable housing were available while non-poor individuals were more likely to move out of these areas, further concentration poverty [@nord1998]. This movement can impact the health of both the sending and the receiving places since concentrated poverty is associated with worse health, overall [@auchincloss2002]. In sending areas, the outmigration of working-age individuals can lead to a shortage of healthcare providers and caregivers (a compositional factor of place), adversely affecting community health. Conversely, receiving areas may experience increased demand for healthcare and social services, which can strain existing resources but also lead to improvements in infrastructure due to increased funding and investment (compositional change resulting in contextual change) [@vasile2023]. <!--# excluding remittances, dual labor market theory, and world systems theory -->
 
@@ -86,14 +86,6 @@ Research has shown that migrants moving from resource-depleted regions to areas 
 
 These theories of migration provide a comprehensive framework for understanding the complex interplay between migration, urbanicity, and health. Migration driven by economic, social, and structural factors can influence health outcomes through changes in healthcare access, socioeconomic conditions, and social support systems in both sending and receiving regions.
 
-## ~~Our Framework~~
-
-[![~~Figure 1: Our Framework~~](images/framework.png)](Figure%201)
-
-~~The framework we use to think about the relationships between migration, urbanicity, and contextual and compositional measures of the health of a place is shown in Figure 1. The left circle represents contextual factors, specifically the structural determinants of health, such as access to education, infrastructure, and environmental conditions. The right circle represents compositional factors, focusing on demographic characteristics, like age, gender, and socioeconomic status. We have made the contextual circle larger to reflect our value choice that contextual factors are more important to explaining the health of a place than compositional factors. CITE.~~
-
-~~Urbanicity impacts both spheres. It affects context by shaping the built environment, access to resources, and exposure to environmental stressors. Simultaneously, it influences composition through population density, migration patterns, and social networks, which vary between urban and rural areas. Migration, driven by both push and pull factors, modifies the effect of urbanicity on contextual and compositional factors, often reshaping the health outcomes of individuals and communities within places. Thus, urbanicity links the structural and individual determinants of health, demonstrating how place-based and population-specific characteristics jointly influence health disparities. This framework emphasizes the intertwined nature of urbanicity, migration, and health outcomes, illustrating how contextual (structural) and compositional (demographic) factors both contribute to place-based health disparities.~~
-
 ## Policy Implications
 
 Urbanicity, migration, and environmental stressors each pose unique public health challenges that require targeted policy strategies. Addressing both structural (contextual) and compositional aspects of place is essential, as they are inherently intertwined. Policies designed to reduce health disparities must simultaneously address the broader environmental factors that shape communities and the specific health needs of their populations.
@@ -104,22 +96,22 @@ Migration, particularly along the rural-urban continuum, can contribute to inequ
 
 Migration can also influence social inequalities, with patterns differing by age group. Younger migrants, particularly those under 40, tend to reduce racial segregation in urban areas, while older migrants, especially those over 60, often contribute to increased segregation [@winkler2016]. Additionally, regions with a high proportion of recent migrants may experience environmental inequality, such as lower levels of green vegetation in urban areas, further exacerbating health and quality-of-life disparities [@fong2020]. This evidence highlights how migration patterns, especially between rural and urban areas, are intricately connected to both economic and social inequality.
 
-As climate change exacerbates environmental stressors, such as pollution and extreme weather, policies must prepare communities for climate-induced migration. A study of internal migration in China found that individuals who were less educated and living in rural areas were more likely to migrate due to climate-related changes [@gray2020]. And among individuals who migrate from rural to urban areas are especially exposed to health risks such as water insecurity and infectious disease [@mazhin2020]. Likewise, migrants who are displaced due to climate change are especially likely to experience poor mental health [@anillw]. A recent study highlights that climate-induced migration could result in up to 300% increase in population density, amplifying urbanization pressures and increasing health risks in already stressed environments [@hsiang2016]. Similarly, expanding urban housing development in hazard-prone areas of the US increases the vulnerability of growing populations to extreme weather events, further amplifying the risks of disaster and health-related consequences for both long-term residents and incoming migrants [@strader2015]. Notably, recent findings show that urban densification drives increased exposure to earthquakes and hurricanes while suburban and rural expansion contributes to heightened flood, fire, and tornado risk [@iglesias2021], underscoring the need for effective urban planning and disaster preparedness policies to mitigate these compounded risks.
+As climate change exacerbates environmental stressors, such as pollution and extreme weather, policies must prepare communities for climate-induced migration. A study of internal migration in China found that individuals who were less educated and living in rural areas were more likely to migrate due to climate-related changes [@gray2020]. And among individuals who migrate from rural to urban areas are especially exposed to health risks such as water insecurity and infectious disease [@mazhin2020]. Likewise, migrants who are displaced due to climate change are especially likely to experience poor mental health [@mcmichael2012]. A recent study highlights that climate-induced migration could result in up to 300% increase in population density, amplifying urbanization pressures and increasing health risks in already stressed environments [@hsiang2016]. Similarly, expanding urban housing development in hazard-prone areas of the US increases the vulnerability of growing populations to extreme weather events, further amplifying the risks of disaster and health-related consequences for both long-term residents and incoming migrants [@strader2015]. Notably, recent findings show that urban densification drives increased exposure to earthquakes and hurricanes while suburban and rural expansion contributes to heightened flood, fire, and tornado risk [@iglesias2021], underscoring the need for effective urban planning and disaster preparedness policies to mitigate these compounded risks.
 
 Understanding the health effects of migration and urbanicity through both contextual and compositional lenses is crucial. As climate change drives population movement, addressing these issues through informed public health interventions can reduce health inequities and lessen the potential negative impacts of climate-induced migration. Robust, adaptive health systems that are both climate-resilient and migrant-inclusive will play a key role in safeguarding public health in the face of these growing challenges.
 
 ## Specific Aims
 
-The first chapter of this dissertation examines the influence of urbanicity on mental health in US counties, aiming to quantify contemporary relationships between the built environment and self-reported poor mental health days. The second chapter shifts the focus to migration, investigating how county-to-county migration flows influence average health metrics and the potential misattribution of health outcome changes when migration is not considered in models. The third chapter builds on these themes by exploring the interactions between migration patterns and premature age-adjusted mortality rates, using tensor decomposition techniques to uncover how spatial and temporal migration flows may contribute to health disparities across US counties.
+The first manuscript of this dissertation examines the influence of urbanicity on mental health in US counties, aiming to quantify contemporary relationships between the built environment and self-reported poor mental health days. The second manuscript shifts the focus to migration, investigating how county-to-county migration flows influence average health metrics and the potential misattribution of health outcome changes when migration is not considered in models. Finally, the third manuscript builds on these themes by exploring the interactions between migration patterns and premature age-adjusted mortality rates, using tensor decomposition techniques to uncover how spatial and temporal migration flows may contribute to health disparities across US counties.
 
-**Chapter 1: Urbanicity and Mental Health in US Counties**
+**Manuscript 1: Urbanicity and Mental Health in US Counties**
 
 Geography may influence mental health by inducing changes in social, physical, and health-related environmental factors. This chapter seeks to quantify contemporary relationships between urbanicity and self-reported poor mental health days across US counties, incorporating both contextual and compositional measures. Using data from the County Health Rankings and Roadmaps, regression analyses were performed on 3,142 US counties, controlling for contextual variables such as state, income, and education, as well as compositional factors like age and race/ethnicity. Findings indicate that large central metro counties report fewer average poor mental health days compared to small metro counties, with differences partially mediated by contextual factors such as the built environment, including better food environments. Conversely, counties in the most rural category report more poor mental health days, with these disparities not mediated by considered factors. These results highlight the need for tailored public health strategies that address specific urban and rural mental health challenges, taking into account both the structural environment and the composition of the population.
 
-**Chapter 2: Migration and Health Outcomes in US Counties**
+**Manuscript 2: Migration and Health Outcomes in US Counties**
 
 This chapter investigates the impact of migration on county-level health outcomes in the United States, emphasizing the importance of considering compositional changes due to migration when analyzing health metrics alongside contextual county characteristics. Using mortality data from CDC WONDER and migration flow data from the IRS, the study develops novel extensions of autoregressive spatial error models to incorporate migration flows. The analysis focuses on premature age-adjusted mortality rates from 2011 to 2019, examining the influence of migration and urbanicity. The findings reveal that migration significantly improves the explainability of models for county-level health outcomes, showing that compositional changes in population due to migration, alongside contextual factors such as local healthcare infrastructure, are critical for understanding health disparities. By accounting for migration flows and health-related selection of migrants, the study provides a comprehensive understanding of the dynamic relationship between migration and health outcomes, informing more precise public health policies.
 
-**Chapter 3: Spatio-temporal analysis of county-to-county migration patterns on premature mortality**
+**Manuscript 3: Spatio-temporal analysis of county-to-county migration patterns on premature mortality**
 
-This study focuses on the relationship between county-level migration patterns and health outcomes, specifically premature age-adjusted mortality rates, using IRS migration data from 2011 to 2019. The study applies tensor decomposition, a mathematical technique that models migration flows across space and time, to better understand how migration patterns shape health outcomes at the county-level. By analyzing how migration influences both the contextual (structural) and compositional (individual) factors of health, the study reveals that different migration patterns are associated with varying health outcomes. For instance, counties experiencing significant outmigration—particularly in the Southern United States—tend to face higher mortality rates, suggesting that outmigration may exacerbate health challenges in these regions. In contrast, counties involved in more stable migration flows, particularly in the Western and Southeastern U.S., seem to experience better health outcomes. The findings emphasize the importance of considering both the origin and destination of migration flows in order to fully understand how migration influences population health.
+This study focuses on the relationship between county-level migration patterns and health outcomes, specifically premature age-adjusted mortality rates, using IRS migration data from 2011 to 2019. The study applies tensor decomposition, a mathematical technique that models migration flows across space and time, to better understand how migration patterns shape health outcomes at the county-level. By analyzing how migration influences both the contextual (structural) and compositional (individual) factors of health, the study reveals that different migration patterns are associated with varying health outcomes. For instance, counties experiencing significant outmigration tend to face higher mortality rates, suggesting that outmigration may exacerbate health challenges in these regions. In contrast, counties involved in more stable migration flows seem to experience better health outcomes. The findings emphasize the importance of considering both the origin and destination of migration flows in order to fully understand how migration influences population health.
