--- a/references.bib
+++ b/references.bib
@@ -2845,3 +2845,187 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	doi = {10.1117/12.2587909},
 	url = {https://www.spiedigitallibrary.org/conference-proceedings-of-spie/11730/117300D/Comparison-of-CP-and-Tucker-tensor-decomposition-algorithms/10.1117/12.2587909.full}
 }
+
+@article{krabbendam2005,
+	title = {Schizophrenia and Urbanicity: A Major Environmental Influence{\textemdash}Conditional on Genetic Risk},
+	author = {Krabbendam, Lydia and van Os, Jim},
+	year = {2005},
+	month = {01},
+	date = {2005-01-01},
+	journal = {Schizophrenia Bulletin},
+	pages = {795--799},
+	volume = {31},
+	number = {4},
+	doi = {10.1093/schbul/sbi060},
+	url = {https://doi.org/10.1093/schbul/sbi060}
+}
+
+@article{burnham2004,
+	title = {Multimodel Inference: Understanding AIC and BIC in Model Selection},
+	author = {Burnham, Kenneth P. and Anderson, David R.},
+	year = {2004},
+	month = {11},
+	date = {2004-11},
+	journal = {Sociological Methods & Research},
+	pages = {261--304},
+	volume = {33},
+	number = {2},
+	doi = {10.1177/0049124104268644},
+	url = {http://journals.sagepub.com/doi/10.1177/0049124104268644},
+	langid = {en}
+}
+
+@article{miilunpalo1997,
+	title = {Self-rated health status as a health measure: The predictive value of self-reported health status on the use of physician services and on mortality in the working-age population},
+	author = {Miilunpalo, Seppo and Vuori, Ilkka and Oja, Pekka and Pasanen, Matti and Urponen, Helka},
+	year = {1997},
+	month = {05},
+	date = {1997-05-01},
+	journal = {Journal of Clinical Epidemiology},
+	pages = {517--528},
+	volume = {50},
+	number = {5},
+	doi = {10.1016/S0895-4356(97)00045-0},
+	url = {https://www.sciencedirect.com/science/article/pii/S0895435697000450}
+}
+
+@article{kolda2008,
+	title = {Tensor Decompositions and Applications},
+	author = {Kolda, Tamara G. and Bader, Brett W.},
+	year = {2008},
+	date = {2008}
+}
+
+@article{penkalla2014,
+	title = {Urbanicity and Mental Health in Europe: A Systematic Review},
+	author = {Penkalla, Anna and Kohler, Stefan},
+	year = {2014},
+	month = {12},
+	date = {2014-12-15},
+	journal = {European Journal of Mental Health},
+	pages = {163{\textendash}177},
+	volume = {9},
+	doi = {10.5708/EJMH.9.2014.2.2}
+}
+
+@article{morello-frosch2002,
+	title = {Environmental justice and regional inequality in southern California: implications for future research.},
+	author = {Morello-Frosch, Rachel and Pastor, Manuel and Porras, Carlos and Sadd, James},
+	year = {2002},
+	month = {04},
+	date = {2002-04},
+	journal = {Environmental Health Perspectives},
+	pages = {149--154},
+	volume = {110},
+	number = {suppl 2},
+	doi = {10.1289/ehp.02110s2149},
+	url = {https://ehp.niehs.nih.gov/doi/abs/10.1289/ehp.02110s2149},
+	note = {Publisher: Environmental Health Perspectives}
+}
+
+@article{wilkinson1997,
+	title = {Commentary: Income inequality summarises the health burden of individual relative deprivation},
+	author = {Wilkinson, Richard G.},
+	year = {1997},
+	month = {06},
+	date = {1997-06-14},
+	journal = {BMJ},
+	pages = {1727},
+	volume = {314},
+	number = {7096},
+	doi = {10.1136/bmj.314.7096.1727},
+	url = {https://www.bmj.com/content/314/7096/1727},
+	note = {Publisher: British Medical Journal Publishing Group
+Section: Paper
+PMID: 9202502},
+	langid = {en}
+}
+
+@article{mcmichael2012,
+	title = {An Ill Wind? Climate Change, Migration, and Health},
+	author = {McMichael, Celia and Barnett, Jon and McMichael, Anthony J.},
+	year = {2012},
+	month = {05},
+	date = {2012-05},
+	journal = {Environmental Health Perspectives},
+	pages = {646--654},
+	volume = {120},
+	number = {5},
+	doi = {10.1289/ehp.1104375},
+	url = {https://ehp.niehs.nih.gov/doi/full/10.1289/ehp.1104375},
+	note = {Publisher: Environmental Health Perspectives}
+}
+
+@article{sparks2010,
+	title = {An application of spatially autoregressive models to the study of US county mortality rates},
+	author = {Sparks, Patrice Johnelle and Sparks, Corey S.},
+	year = {2010},
+	date = {2010},
+	journal = {Population, Space and Place},
+	pages = {465--481},
+	volume = {16},
+	number = {6},
+	doi = {10.1002/psp.564},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/psp.564},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/psp.564},
+	langid = {en}
+}
+
+@article{sun2016,
+	title = {Understanding urban mobility patterns with a probabilistic tensor factorization framework},
+	author = {Sun, Lijun and Axhausen, Kay W.},
+	year = {2016},
+	month = {09},
+	date = {2016-09-01},
+	journal = {Transportation Research Part B: Methodological},
+	pages = {511--524},
+	volume = {91},
+	doi = {10.1016/j.trb.2016.06.011},
+	url = {https://www.sciencedirect.com/science/article/pii/S0191261516300261}
+}
+
+@misc{williams2015,
+	title = {New Estimates Of How Many Households Pay No Federal Income Tax},
+	author = {Williams, Roberton},
+	year = {2015},
+	month = {10},
+	date = {2015-10-06},
+	url = {https://www.taxpolicycenter.org/taxvox/new-estimates-how-many-households-pay-no-federal-income-tax},
+	langid = {en}
+}
+
+@misc{lavelle2022,
+	title = {U.S. Migration Patterns Before and After the Start of the Covid-19 Pandemic - Federal Reserve Bank of Chicago},
+	author = {Lavelle, Martin and Kepner, Elizabeth},
+	year = {2022},
+	month = {07},
+	date = {2022-07-07},
+	url = {https://www.chicagofed.org/publications/blogs/midwest-economy/2022/migration-before-and-during-pandemic},
+	langid = {en}
+}
+
+@misc{frey2021,
+	title = {Pandemic population change across metro America: Accelerated migration, less immigration, fewer births and more deaths},
+	author = {Frey, William},
+	year = {2021},
+	month = {05},
+	date = {2021-05-20},
+	url = {https://www.brookings.edu/articles/pandemic-population-change-across-metro-america-accelerated-migration-less-immigration-fewer-births-and-more-deaths/},
+	langid = {canadian}
+}
+
+@misc{foster2018,
+	title = {Foreign-Born and Native-Born Migration in the U.S.: Evidence from IRS Administrative and Census Survey Records},
+	author = {Foster, Thomas and Ellis, Mark and Fiorio, Lee},
+	year = {2018},
+	month = {07},
+	date = {2018-07},
+	url = {https://www.census.gov/library/working-papers/2018/adrm/carra-wp-2018-07.html},
+	note = {Section: Government},
+	langid = {en}
+}
+
+@misc{NIMH,
+	title = {NIMH: Mental Illness},
+	url = {https://www.nimh.nih.gov/health/statistics/mental-illness.shtml}
+}
