--- a/aim2.qmd
+++ b/aim2.qmd
@@ -11,6 +11,8 @@ editor: visual
 bibliography: references.bib
 ---
 
+<a id="aim2"></a>
+
 ```{r set up }
 library(tidyverse)
 library(ggplot2)
@@ -24,7 +26,7 @@ We are still discovering how changes in our geographical location relate to our 
 
 Measuring health outcomes has been important for guiding effective policy-making. The idea is to identify potential factors that may influence health so that policy-makers can design precise, well-founded strategies. In this regard, it is important for policy-makers to separate changes in average health outcomes that stem from the built environment as opposed to the composition of the population itself. If the built environment is the cause, enhancing access to parks, medical facilities, and public transport might be a solution. If, however, composition changes are the cause, policy-makers may want to learn about their the new residents. This insight will allow for a more tailored approach to meet their specific needs, such as providing affordable housing for low-income families. County-level data and analyses have been valuable tools in gaining this insight, serving to inform local policies on how to raise the average health of a county or reduce disparities within a county<!--# cite -->. This approach has proven especially valuable in the face of challenges like the COVID pandemic, where local entities like health departments, school boards, and faith-based organizations played a pivotal role in responding to public health needs based on county data.
 
-Traditional approaches to county-level analyses of health involve autoregressive models that account for variation across space and time. The application of autoregressive models at the county level has seen various implementations, such as a county's relative position and historical mortality rates for forecasting future mortality rates [@yang2011], or estimating mortality rates that adjust for county-level information on income and employment, population density and rurality, and race/ethnicity [@anappli]. Similarly, during the early stages of the COVID-19 pandemic, a spatial autoregressive model was utilized to assess the relationships between county-level COVID-19 mortality rates and county-level sociodemographic characteristics [@fielding-miller2020]. This modeling approach has also been applied to age-group and country-level data to explain cohort effects within countries[@li2021], and more recently, to enhance the estimation of country-level life expectancy, particularly for younger demographics, with improved efficiency and accuracy [@shi2021].
+Traditional approaches to county-level analyses of health involve autoregressive models that account for variation across space and time. The application of autoregressive models at the county level has seen various implementations, such as a county's relative position and historical mortality rates for forecasting future mortality rates [@yang2011], or estimating mortality rates that adjust for county-level information on income and employment, population density and rurality, and race/ethnicity [@sparks2010]. Similarly, during the early stages of the COVID-19 pandemic, a spatial autoregressive model was utilized to assess the relationships between county-level COVID-19 mortality rates and county-level sociodemographic characteristics [@fielding-miller2020]. This modeling approach has also been applied to age-group and country-level data to explain cohort effects within countries[@li2021], and more recently, to enhance the estimation of country-level life expectancy, particularly for younger demographics, with improved efficiency and accuracy [@shi2021].
 
 These modeling approaches, however, overlook the aspect of migration.  An important consideration is how much of the variation in a county’s average health outcomes could be attributed to the movement of individuals between regions. As a first hypothesis, we might anticipate that a person moving from a region with better (worse) average health outcomes to one with worse (better) average outcomes would increase (decrease) the average health outcomes of their destination, however slightly. If this is true, then models that ignore this source of variation may incorrectly attribute a change in average health outcomes to other factors, such as the built environment.  
 
@@ -58,7 +60,7 @@ We included data from years 2011 to 2019, resulting in 9 years of data. We exclu
 
 ### Variables
 
-[The outcome of interest is county-level age-adjusted rates of premature mortality]{.underline}, denoted by $y_{it}$ for county $i$ in year $t$. Premature mortality is defined as any death occurring before age 75. Age-adjusted rates of premature mortality account for county-level age distribution differences by applying age-specific rates to a standard age distribution. We use age-adjusted rates available through CDC WONDER which are calculated using the 2000 US Standard Population. Age-adjusted premature mortality rates are a popular gold standard for comparing health across counties since premature death has a clear and common definition and has important implications for health policy and health equity [@self-rat1997; @jylhä2009; @olson-williams2023].
+[The outcome of interest is county-level age-adjusted rates of premature mortality]{.underline}, denoted by $y_{it}$ for county $i$ in year $t$. Premature mortality is defined as any death occurring before age 75. Age-adjusted rates of premature mortality account for county-level age distribution differences by applying age-specific rates to a standard age distribution. We use age-adjusted rates available through CDC WONDER which are calculated using the 2000 US Standard Population. Age-adjusted premature mortality rates are a popular gold standard for comparing health across counties since premature death has a clear and common definition and has important implications for health policy and health equity [@miilunpalo1997; @jylhä2009].
 
 A key explanatory factor is [lagged county-level age-adjusted premature mortality]{.underline}, denoted by $y_{i,t-1}$ for county $i$ in the prior year $(t-1)$. This is our autoregressive term, which is used to account for an outcome variable that follows consistent trends over time. To avoid systematically excluding counties with small population size and to create a balanced panel dataset, we used the mice R package [@mice-2] to impute lagged premature age-adjusted mortality rates $y_{i,t-1}$ for counties with missing values. A balanced panel dataset ensures that no county has missing values for any year. This condition simplifies the matrix math involved in calculating the error in temporal models. We applied predictive mean matching and conducted five iterations. Predictive mean matching was chosen because it helps preserve the original distribution of the data and ensures that our imputed estimates are realistic. <!--# cite??? -->
 
@@ -106,7 +108,7 @@ To determine which values of $d_{ij}$ best explain trends in county-level premat
 
 #### Model Fitting
 
-All models were fit using the *splm* and *splines* R packages [@splines-2; @splm-3]. Splines ranged from two to five degrees of freedom. Models were compared using the Bayesian Information Criterion (BIC), which is commonly used to identify models with the greatest explanatory power [@kuha2004]. Models were selected for subsequent analyses based on having the lowest BIC score or being within approximately 10 points of the minimum BIC score [@multimod], while also ensuring numerical stability.
+All models were fit using the *splm* and *splines* R packages [@splines-2; @splm-3]. Splines ranged from two to five degrees of freedom. Models were compared using the Bayesian Information Criterion (BIC), which is commonly used to identify models with the greatest explanatory power [@kuha2004]. Models were selected for subsequent analyses based on having the lowest BIC score or being within approximately 10 points of the minimum BIC score [@burnham2004], while also ensuring numerical stability.
 
 The constant value used for $d_{ij}$ was varied by incrementing by 50 from -200 to 200 in units of premature deaths per 100,000 population. The four values for $d_{ij}$ accounting for urbanicity were each varied, factorially, by incrementing by 50 from -200 to 200, resulting in 6,561(= $9^4$) distinct choices for $(d_{uu}, d_{rr}, d_{ru}, d_{ur})$. After identifying a range of $d_{ij}$ values that minimized the BIC score, we refined our search using a smaller increment of 20, which resulted in a search across an additional 6,561 choices for $(d_{uu}, d_{rr}, d_{ru}, d_{ur})$.
 
@@ -116,74 +118,64 @@ The constant value used for $d_{ij}$ was varied by incrementing by 50 from -200 
 
 The tables below present descriptive statistics for $y_{it}$​ (premature age-adjusted mortality rate) and migration rates for each year and categorized by county type (rural, urban). Migration rates tend to be higher for urban destination counties than rural destination counties, meanwhile, premature age-adjusted mortality rates tend to be lower for urban counties than rural counties.
 
-TABLE 1 HERE
-
-```{r table1 calcs for rural and urban print rural only , results:hide}
-
-#| label: tbl-table1rural
-  
-# Add caption. Combine tables. Remove “total” column and remove “missing” row. N’s don’t change so just put the one value next to “rural counties (n=xxx)” and “urban counties (n=xxx)” Focus on either mean/SD or median/IQR/range, likely the former. (And eventually format).
-
+```{r}
+# Load necessary packages
 library(tidyverse)
-library(ggplot2)
-library(table1)
+library(kableExtra)
 
+# Load data
 load("data_processed_aim2/migterm_imp.Rdata")
 
-migterm_imp$migrat = as.numeric(migterm_imp$totin_d)/as.numeric(migterm_imp$pop_d0)*1000
+# Calculate migration rate
+migterm_imp$migrat <- as.numeric(migterm_imp$totin_d) / as.numeric(migterm_imp$pop_d0) * 1000
 
-migterm_imp = migterm_imp %>% 
-   mutate(
-    rural = factor(rural, levels = c(0, 1), labels = c("Urban", "Rural"))
-  )
+# Label factors
+migterm_imp <- migterm_imp %>%
+  mutate(rural = factor(rural, levels = c(0, 1), labels = c("Urban", "Rural")))
 
-# Define labels for the table
-table1::label(migterm_imp$destid) = "County"
-table1::label(migterm_imp$year) = "Year"
-table1::label(migterm_imp$migrat) = "Migration rate"
-table1::label(migterm_imp$rate_d1) = "Premature age-adjusted mortality rate"
-table1::label(migterm_imp$rural) = "Urban/Rural"
-
-# Define units for the columns
-table1::units(migterm_imp$migrat) <- "per 1,000"
-table1::units(migterm_imp$rate_d1) <- "per 100,000"
-
-# Filter data for rural
+# Filter data for rural and urban separately
 rural_data <- migterm_imp %>% filter(rural == "Rural")
-
-# Filter data for urban
 urban_data <- migterm_imp %>% filter(rural == "Urban")
 
-# Generate the table for rural with title
-table_rural <- table1::table1(~ migrat + rate_d1 | year, 
-                              data = rural_data, 
-                              overall = "Total", 
-                              title = "Rural Counties",
-                              caption = "Migration rate and mortality rate stratified by year for rural counties")
+# Summarize the data for each year, calculating median, min, and max and formatting as "median [min, max]"
+# Handle NA values to display as "NA" instead of "NA[-Inf, Inf]"
+summarize_data <- function(data) {
+  data %>%
+    group_by(year) %>%
+    summarize(
+      migrat_summary = ifelse(
+        all(is.na(migrat)), "NA",
+        sprintf("%.2f [%.2f, %.2f]", median(migrat, na.rm = TRUE), min(migrat, na.rm = TRUE), max(migrat, na.rm = TRUE))
+      ),
+      rate_d1_summary = ifelse(
+        all(is.na(rate_d1)), "NA",
+        sprintf("%.2f [%.2f, %.2f]", median(rate_d1, na.rm = TRUE), min(rate_d1, na.rm = TRUE), max(rate_d1, na.rm = TRUE))
+      )
+    )
+}
 
-# Generate the table for urban with title
-table_urban <- table1::table1(~ migrat + rate_d1 | year, 
-                              data = urban_data, 
-                              overall = "Total", 
-                              title = "Urban Counties",
-                              caption = "Migration rate and mortality rate stratified by year for urban counties")
+# Create summarized tables for rural and urban data
+rural_summary <- summarize_data(rural_data)
+urban_summary <- summarize_data(urban_data)
 
-# Display the tables
-table_rural = as.data.frame(table_rural)
-knitr::kable(table_rural, format = "markdown", caption = "Rural counties")
+# Format the table for the desired layout with additional header row
+format_table <- function(summary_data, title) {
+  summary_data %>%
+    knitr::kable(
+      format = "latex",
+      col.names = c("Year", "Median [Min, Max]", "Median [Min, Max]"),
+      caption = paste(
+        title,
+        "Migration rate and premature age-adjusted mortality rate for each year. Note: migration rates for 2011 are not included because the migration-flow data starts from 2011 to 2012, and these values are shown in the 2012 section."
+      )
+    ) %>%
+    kable_styling(font_size = 8, latex_options = "scale_down") %>% 
+    add_header_above(c(" " = 1, "Migration Rate (per 1,000)" = 1, "Premature Age-Adjusted Mortality Rate (per 100,000)" = 1))
+}
 
-
-
-# add below: Note: migration rates for the year 2011 are not included. This is because the migration-flow data starts from 2011 to 2012, and these values are shown in the 2012 section of the table, corresponding with the 2012 premature age-adjusted mortality rates.
-
-
-```
-
-```{r table1 print urban only }
-#| label: tbl-table1urban
-# Display the tables
-table_urban = as.data.frame(table_urban)
-knitr::kable(table_urban, format = "markdown", caption = "Urban counties")
+# Format and display tables for rural and urban data
+format_table(rural_summary, "Rural Counties")
+format_table(urban_summary, "Urban Counties")
 
 ```
 
@@ -282,7 +274,7 @@ ggplot(data = bick_nourb_tot, aes(x = as.numeric(newk), y = as.numeric(bicspat))
        y = "BIC score")
 ```
 
-However, we reach a different conclusion when varying $d_{ij}$ based on the urbanicity of the origin and destination (rural-to-urban, rural-to-rural, urban-to-rural, and urban-to-urban). Our coarse grid search identified a minimum BIC score when . Refining our search around this minimum, we identified a minimum BIC score for the set $(d_{uu} =-100, d_{rr}=0, d_{ru}=0, d_{ur}=0)$. Refining our search around this minimum, we identified a minimum BIC score for the set $(d_{uu} =-100, d_{rr}=0, d_{ru}=0, d_{ur}=20)$. Thus, our models improve when we assume there are some health-related selection of migrants from unmeasured factors, thereby supporting Hypothesis 3.
+However, we reach a different conclusion when varying $d_{ij}$ based on the urbanicity of the origin and destination (rural-to-urban, rural-to-rural, urban-to-rural, and urban-to-urban). Our coarse grid search identified a minimum BIC score when $(d_{uu} =-100, d_{rr}=0, d_{ru}=0, d_{ur}=0)$. Refining our search around this minimum, we identified a minimum BIC score for the set $(d_{uu} =-100, d_{rr}=0, d_{ru}=0, d_{ur}=20)$. Thus, our models improve when we assume there are some health-related selection of migrants from unmeasured factors, thereby supporting Hypothesis 3.
 
 Figure 3 shows the relationship between BIC scores and values of $d_{ij}$ for each migration type, while holding other values constant at 0. For migration to rural counties ($d_{rr}$ and $d_{ru}$), the minimum BIC score occurs when the model assumes these counties attract individuals with average county health (i.e. when $d_{rr} = 0$ and $d_{ru} = 0$). However, for urban-to-urban migration ($d_{uu}$), lower BIC scores occur when the model assumes the urban counties attract individuals with lower age-adjusted premature mortality rates, suggesting that movers tend to migrate from healthier urban counties to less healthy urban counties. For rural-to-urban migration ($d_{ru}$), there is some indication that rural origins have higher age-adjusted premature mortality rates compared to their urban destinations, as indicated by the minimum BIC score occurring at $d_{ur} = 20$. However, the relationship between $d_{ur}$ and BIC score appears to be relatively flat, with all BIC scores remaining close to the minimum, regardless of the value of $d_{ur}$. Therefore, there is limited evidence of health-related selection from rural origins to urban destinations.
 
@@ -399,12 +391,12 @@ Additionally, because urban counties have larger populations than rural counties
 
 Our use of county-level premature age-adjusted mortality as the outcome of interest offers both strengths and limitations. While this measure allows for comparability across different times and locations and has a robust definition, it does not perfectly align with the demographics of migrating populations. The median age of movers in the US is under 30 years [@s0701:g], suggesting a potential mismatch since mortality primarily results from chronic diseases with long latency periods. Although previous research indicates that health differences among immigrants can be detected within a relatively short period, applying this to our study assumes similar dynamics for non-infectious diseases [@vanaart2017a]. Nonetheless, county-level measures of premature mortality are widely used as a proxy for overall county health. For example, a 1983 WHO report recommended mortality and morbidity measures to understand health and migration [@gushulak2006], and length of life measures hold 50% weight in the County Health Rankings Model of place-based health outcomes [@explore].
 
-Another significant limitation is the reliance on IRS data, which includes only approximately 45% of the total US population [@newesti2015; @desilver2023]. Excluded groups, such as university students, low-income individuals, and informal workers [@dewaard2022], are systematically missing from our analysis, possibly biasing the results. Despite these limitations, IRS migration data has been used many times in the past to complete complex and accurate analyses of US migration patterns. For instance, IRS migration flow data has been used to estimate the effects of sea-level rise on geographic distribution of the US population [@hauer2017], measure recovery after Hurricanes Katrina and Rita [@curtis2015], and assess the economic impacts of migration resulting from environmental hazards [@shumway2014].
+Another significant limitation is the reliance on IRS data, which includes only approximately 45% of the total US population [@williams2015; @desilver2023]. Excluded groups, such as university students, low-income individuals, and informal workers [@dewaard2022], are systematically missing from our analysis, possibly biasing the results. Despite these limitations, IRS migration data has been used many times in the past to complete complex and accurate analyses of US migration patterns. For instance, IRS migration flow data has been used to estimate the effects of sea-level rise on geographic distribution of the US population [@hauer2017], measure recovery after Hurricanes Katrina and Rita [@curtis2015], and assess the economic impacts of migration resulting from environmental hazards [@shumway2014].
 
 We attempt to leverage the limitations of the IRS data as a strength in our analyses: because IRS county-to-county migration data includes only individuals who file taxes with the US government both before and after they migrate, we assume that individuals represented in the IRS migration flows data are more homogeneous than migrants excluded from IRS estimates since they may be less likely to have been pushed to migrate by potentially health-related factors such as violence, famine, and corruption than individuals who migrate but are excluded from the IRS data. Therefore, any differences in changes in health between counties may be the result of self-selection by IRS-represented migrants or health-related selection by non-IRS-represented migrants.
 
 Additionally, while the data quality issues identified in the post-2011-2012 IRS migration data are concerning [@dewaard2022], we believe that the added temporal volatility does not undermine our conclusions. Since our analysis examines the US as a whole and focuses on rural/urban differences, all counties are presumably treated similarly. This uniform treatment across counties suggests that the relative comparisons between rural and urban areas remain valid, and the temporal volatility should not disproportionately affect one type of county over another.
 
-Finally, our data precedes the COVID-19 pandemic, which significantly altered migration patterns and health outcomes. According to the Chicago Federal Reserve Bank, state-to-state moves were 15.1% higher pre-pandemic than during the pandemic [@u.s.mig], and rates of domestic migration and international migration decreased in urban counties in 2020 while domestic migration increased in suburban counties in 2020 [@pandemic]. Future studies should consider the pandemic's impact to provide a more current understanding of migration and health dynamics. Understanding these shifts is crucial for developing policies that address the evolving needs of migrating populations in a post-pandemic world.
+Finally, our data precedes the COVID-19 pandemic, which significantly altered migration patterns and health outcomes. According to the Chicago Federal Reserve Bank, state-to-state moves were 15.1% higher pre-pandemic than during the pandemic [@lavelle2022], and rates of domestic migration and international migration decreased in urban counties in 2020 while domestic migration increased in suburban counties in 2020 [@frey2021]. Future studies should consider the pandemic's impact to provide a more current understanding of migration and health dynamics. Understanding these shifts is crucial for developing policies that address the evolving needs of migrating populations in a post-pandemic world.
 
 In conclusion, there are many factors that contribute to the relationship between health and place. In our analyses, we have chosen to emphasize the potential impact of migration or movement between places on place-based health. We accounted for compositional changes in county population due to migration using our weighted average migration term and possible health-related selection for migration (ie some individuals are more likely to migrate than others) using our $d_{ij}$ adjustment. We cannot fully understand county-level health without first understanding county interconnectedness and how it drives place-based health disparities. Recognizing that the United States is heterogeneous and that the mechanisms by which migration may impact health may also be heterogeneous, we attempt to quantify rural-urban differences in the relationship between migration and place-based health. The long-term goal of this work is to contribute to understanding the mechanisms by which mobility may be related to place-based health disparities so that local decision-makers may account for patterns in mobility when creating policy towards improved health for all people in all places. Understanding rural-urban mobility patterns is a necessary first step towards understanding rural-urban health disparities.
